Agrego el patch, findByID y delete en producto
